@startuml

    skinparam linetype ortho
    skinparam packageStyle rectangle
    skinparam class {
      BackgroundColor<<Updated>> #E6F4EA
      BorderColor<<Updated>> #137333
      BackgroundColor<<New>> #E8F0FE
      BorderColor<<New>> #1A73E8
    }

    legend right
      |= Highlight |= Meaning |
      |<#E6F4EA>| Updated message/document relationship |
      |<#E8F0FE>| New model element |
    endlegend

    note as CanonicalModelNote
      Canonical operational domain model.
      Lifecycle diagrams may group these operational statuses into
      derived phases, but this diagram keeps the persisted status vocabulary.
    end note

    package "Identity" <<Bounded Context>> {

      class User {
        - id: UserId
        - name: String
        - email: String
      }

      class Group {
        - id: GroupId
        - name: GroupName
      }

      class Permission {
        - id: PermissionId
        - userId: UserId
        - groupId: GroupId
      }

      enum GroupName {
        EXTERNAL
        CURATORIAL
        COLLECTIONS_MANAGEMENT
        DIRECTION
        ADMINISTRATION
      }

      User "1" -- "1..*" Permission
      Group "1" -- "1..*" Permission
      Group *-- GroupName
    }

    package "Collection Use" <<Bounded Context>> {

      class CollectionUseProject <<Aggregate Root>> {
        - id: CollectionUseProjectId
        - referenceNumber: ReferenceNumber
        - title: String
        - purpose: String
        - requestNote: String?
        - note: String?
        - type: UseType
        - status: UseStatus
        - result: UseResult?
        - beginDate: LocalDate
        - endDate: LocalDate?
        - organiser: PermissionId?
        - authorisedBy: PermissionId?
        - authorisedAt: DateTime?
        - provisos: String?
        - venue: String?
        - externalUser: Contact?
        - creditLine: String?
        - objectRefs: List<ObjectReference>
        - reproductionRefs: List<ReproductionReference>
        - entries: List<ProjectEntry>
        - events: List<UseEvent>
        - measurements: List<UseMeasurement>
        - restrictions: List<UseRestriction>
        - texts: List<UseText>
        - userContributions: List<UserContribution>
      }

      class ReferenceNumber <<Value Object>> {
        - value: String
      }

      class Contact <<Value Object>> {
        - name: String
        - email: String
        - phone: String?
        - organisation: String?
        - address: String?
      }

      class ObjectReference <<Value Object>> {
        - objectNumber: String
        - title: String?
        - objectName: String?
        - briefDescription: String?
      }

      class ReproductionReference <<Value Object>> {
        - reproductionNumber: String
        - description: String?
        - format: ReproductionFormat?
        - creator: String?
        - reproductionDate: LocalDate?
        - reproductionType: String?
      }

      enum ReproductionFormat {
        PHOTOGRAPH
        SCAN
        VIDEO
        DIGITAL_FILE
        PRINT
        OTHER
      }

      class UseMeasurement <<Value Object>> {
        - type: String
        - value: String
        - unit: String?
        - qualifier: String?
        - measuredAt: LocalDate
      }

      class UseRestriction <<Value Object>> {
        - nature: String
        - appliedFrom: LocalDate
        - note: String?
      }

      class UseText <<Entity>> {
        - id: UseTextId
        - referenceNumber: String
        - content: String
        - audience: String?
        - author: String?
        - date: LocalDate?
        - language: String?
        - note: String?
        - reason: String?
      }

      class UserContribution <<Entity>> {
        - id: UserContributionId
        - userReference: String?
        - contributor: Contact
        - role: String?
        - personalExperience: String?
        - personalResponse: String?
        - note: String?
        - recordedAt: DateTime
      }

      enum UseType {
        EXHIBITION
        RESEARCH
        OTHER
      }

      enum UseStatus {
        REQUESTED
        ACCEPTED
        REFUSED
        IN_PROGRESS
        SUSPENDED
        COMPLETED
        CANCELLED
        CLOSED
      }

      enum UseResult {
        COMPLETED
        CANCELLED
      }

      class ProjectEntry <<Entity>> {
        - id: ProjectEntryId
        - content: String
        - addedAt: DateTime
        - addedBy: PermissionId
        - attachments: List<Attachment>
      }

      class Attachment <<Value Object>> {
        - fileReference: String
        - fileName: String
        - mediaType: MediaType
        - uploadedAt: DateTime
      }

      enum MediaType {
        DOCUMENT
        IMAGE
        VIDEO
        OTHER
      }

      class UseEvent <<Value Object>> {
        - occurredAt: DateTime
        - type: UseEventType
        - triggeredBy: PermissionId
        - note: String
      }

      enum UseEventType {
        REQUESTED
        ACCEPTED
        REFUSED
        STARTED
        SUSPENDED
        RESUMED
        COMPLETED
        CANCELLED
        CLOSED
      }

      class Proposal <<Aggregate Root>> {
        - id: ProposalId
        - collectionUseProjectId: CollectionUseProjectId
        - type: UseType
        - status: ProposalStatus
        - requestedBy: PermissionId
        - assignedTo: PermissionId?
        - watchers: List<PermissionId>
        - submittedAt: DateTime
        - events: List<ProposalEvent>
        - requestedDocuments: List<RequestedDocument>
        - documents: List<Document>
      }

      enum ProposalStatus {
        SUBMITTED
        PENDING_DOCUMENTS
        UNDER_REVIEW
        PENDING_DIRECTION
        APPROVED
        REJECTED
        CANCELLED
      }

      class ProposalEvent <<Value Object>> {
        - occurredAt: DateTime
        - type: ProposalEventType
        - triggeredBy: PermissionId
        - note: String
      }

      enum ProposalEventType {
        SUBMITTED
        ASSIGNED
        FORWARDED
        DOCUMENTS_REQUESTED
        DOCUMENTS_SUBMITTED
        REVIEW_STARTED
        REFERRED_TO_DIRECTION
        DIRECTION_CLARIFIED
        APPROVED
        REJECTED
        CANCELLED
      }

      class Document <<Entity>> <<Updated>> {
        - id: DocumentId
        - type: DocumentType
        - fileName: String
        - fileReference: String?
        - submittedAt: DateTime
        - submittedBy: PermissionId?
      }

      class RequestedDocument <<Entity>> {
        - id: RequestedDocumentId
        - type: DocumentType
        - description: String
        - requestedAt: DateTime
        - requestedBy: PermissionId
      }

      class DocumentType <<Value Object>> {
        - value: String
      }

      class Conversation <<Aggregate Root>> {
        - id: ConversationId
        - proposalId: ProposalId
      }

      class Message <<Entity>> <<Updated>> {
        - id: MessageId
        - sentAt: DateTime
        - sender: EmailAddress
        - recipient: EmailAddress
        - subject: String
        - body: String
        - attachments: List<MessageAttachment>
      }

      class MessageAttachment <<Value Object>> <<New>> {
        - documentId: DocumentId
        - fileName: String
        - fileReference: String?
      }

      class EmailAddress <<Value Object>> {
        - value: String
      }

      CollectionUseProject *-- ReferenceNumber
      CollectionUseProject *-- UseType
      CollectionUseProject *-- UseStatus
      CollectionUseProject *-- UseResult
      CollectionUseProject *-- "0..1" Contact : externalUser
      CollectionUseProject *-- "0..*" ObjectReference
      CollectionUseProject *-- "0..*" ReproductionReference
      CollectionUseProject *-- "0..*" ProjectEntry
      CollectionUseProject *-- "0..*" UseEvent
      CollectionUseProject *-- "0..*" UseMeasurement
      CollectionUseProject *-- "0..*" UseRestriction
      CollectionUseProject *-- "0..*" UseText
      CollectionUseProject *-- "0..*" UserContribution
      ReproductionReference *-- ReproductionFormat
      ProjectEntry *-- "0..*" Attachment
      Attachment *-- MediaType
      UseEvent *-- UseEventType
      UserContribution *-- Contact : contributor
      Proposal *-- UseType
      Proposal *-- ProposalStatus
      Proposal *-- "0..*" ProposalEvent
      Proposal *-- "0..*" RequestedDocument
      Proposal *-- "0..*" Document
      Proposal "1" o-- "0..*" Permission : watchers
      ProposalEvent *-- ProposalEventType
      RequestedDocument *-- DocumentType
      Document *-- DocumentType
      Conversation *-- "0..*" Message
      Message *-[#137333]- "0..*" MessageAttachment
      Message *-- EmailAddress
      MessageAttachment .[#137333].> Document : references proposal document
      Proposal ..> CollectionUseProject : ref
      Conversation ..> Proposal : ref
    }

    Permission ..> Proposal : ref (cross-context)

@enduml
